<resources>
    <string name="app_name">Test App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
</resources>