<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_card_view"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/news"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultQueryHint="Search news"
                app:iconifiedByDefault="false"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/business"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/search_card_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/business_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/business"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/business_recycler_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/entertainment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/entertainment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/entertainment_recycler_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/general_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/general"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/general_recycler_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/health_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/health"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/health_recycler_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/science_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/science"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/science_recycler_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sports_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/sports"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/sports_recycler_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/technology_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/technology"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


